--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
         
             <div class="portret">
-                <img class="portret-strony-głównej" src="./assets/images/zdjeecie-strona-głlowna.jpg" alt="Agata Hańko">
+                <img class="portret-strony-głównej" src="./assets/images/zdjecie-strona-glowna.jpg" alt="Agata Hańko">
             </div>
         
         </div>
